# efl

./: meson.build  meson_options.txt
data/: Makefile.am
data/elementary/themes/: Makefile.am  default.edc
data/elementary/themes/edc/efl/: naviframe.edc
header_checks/: meson.build
src/: Makefile_Ecore.am  Makefile_Eldbus.am  Makefile_Elementary.am
src/lib/ecore/: Ecore_Eo.h  efl_model_composite.c  efl_model_composite.eo  efl_model_composite_boolean.c  efl_model_composite_boolean.eo  efl_model_composite_boolean_children.eo  efl_model_composite_selection.c  efl_model_composite_selection.eo  efl_model_composite_selection_children.eo  efl_model_container.c  efl_model_container.eo  efl_model_container_item.c  efl_model_container_item.eo  efl_model_item.c
src/lib/ecore_drm2/: Ecore_Drm2.h  ecore_drm2_outputs.c
src/lib/efl/: Efl_Model_Common.h  meson.build
src/lib/efl/interfaces/: efl_model.eo
src/lib/eina/: eina_error.c  meson.build
src/lib/eldbus/: Eldbus.h  eldbus_model.c  eldbus_model_arguments.c  eldbus_model_arguments.eo  eldbus_model_connection.c  eldbus_model_connection.eo  eldbus_model_method.c  eldbus_model_object.c  eldbus_model_object.eo  eldbus_model_proxy.c  eldbus_model_proxy.eo
src/lib/elementary/: Elementary.h  efl_ui_focus_manager_calc.c  efl_ui_frame_stack.c  efl_ui_frame_stack.eo  efl_ui_frame_stack_private.h  efl_ui_model_state.eo  efl_ui_naviframe.c  efl_ui_naviframe.eo  efl_ui_naviframe_part.eo  efl_ui_naviframe_private.h  efl_ui_popup.c  elm_priv.h
src/lib/eo/: Eo.h
src/modules/eina/mp/chained_pool/: meson.build
src/modules/eina/mp/one_big/: meson.build
src/modules/eina/mp/pass_through/: meson.build
src/tests/eina/: meson.build
ssg/src/lottie/: lottiemodel.cpp  lottiemodel.h  lottieparser.cpp
